added redirect 404 for /quiz

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
 [build]
   command = "npm run build"
   publish = "build"
+
+  
+[[redirects]]
+  from = "/quiz"
+  to = "/"
+  status = 404
+  force = true
